[project]
name = "hisim-tools"
version = "0.1.0"
description = "Mou et al. (2024) HiSim large-scale social-movement simulation — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "networkx>=3.2",
]

[project.scripts]
hisim-tools = "hisim_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hisim_tools"]
